roles added into jwt and products create api is added improved security